Production/force-app/main/default/objects/Sales_Planner__c/Sales_Planner__c.object-meta.xml
<CustomObject>
    <label>Sales Planner</label>
    <nameField>
        <label>Sales Planner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesPlanners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>