Production/force-app/main/default/objects/Sales_Planner__c/fields/Account_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Account_Latitude__c</fullName>
    <formula>Account_Sales_Planner__r.BillingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Latitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>