Production/force-app/main/default/objects/Sales_Planner__c/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <description>Account Owner ID</description>
    <formula>CASESAFEID(Account_Sales_Planner__r.Owner.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>