Production/force-app/main/default/objects/Sales_Planner__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Strategic Actions :</label>
    <type>TextArea</type>
</CustomField>