Production/force-app/main/default/objects/Sales_Planner__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Account_Sales_Planner__r.Address__c</formula>
    <label>IMS Address</label>
    <type>Text</type>
</CustomField>