Production/force-app/main/default/objects/Sales_Planner__c/fields/Billing_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_address__c</fullName>
    <formula>Account_Sales_Planner__r.BillingStreet &amp; BR() 
&amp; Account_Sales_Planner__r.BillingCity &amp; BR() 
&amp; Account_Sales_Planner__r.BillingState &amp; BR()
&amp; Account_Sales_Planner__r.BillingPostalCode &amp;BR()
&amp; Account_Sales_Planner__r.BillingCountry</formula>
    <label>Billing address</label>
    <type>Text</type>
</CustomField>