Production/force-app/main/default/objects/Sales_Planner__c/fields/DDD_Outlet_ID__c.field-meta.xml
<CustomField>
    <fullName>DDD_Outlet_ID__c</fullName>
    <formula>Account_Sales_Planner__r.DDD_Outlet_ID__c</formula>
    <label>DDD Outlet ID</label>
    <type>Text</type>
</CustomField>