Production/force-app/main/default/objects/Sales_Planner__c/fields/Direct_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Customer_Number__c</fullName>
    <formula>Account_Sales_Planner__r.Direct_Customer_Number__c</formula>
    <label>Direct Customer Number</label>
    <type>Text</type>
</CustomField>