Production/force-app/main/default/objects/Sales_Planner__c/fields/H_RAM_Projected_Vaxchora_2__c.field-meta.xml
<CustomField>
    <fullName>H_RAM_Projected_Vaxchora_2__c</fullName>
    <label>2H RAM Vaxchora Projected Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>