Production/force-app/main/default/objects/Sales_Planner__c/fields/Last_IMS_Sales_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_IMS_Sales_Activity_Date__c</fullName>
    <formula>Account_Sales_Planner__r.Last_IMS_Sales_Activity_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last IMS Sales Activity Date</label>
    <type>Date</type>
</CustomField>