Production/force-app/main/default/objects/Sales_Planner__c/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <formula>Account_Sales_Planner__r.National_Accounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Account</label>
    <type>Checkbox</type>
</CustomField>