Production/force-app/main/default/objects/Sales_Planner__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Personal Note</label>
    <type>TextArea</type>
</CustomField>