Production/force-app/main/default/objects/Sales_Planner__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <formula>TEXT( Account_Sales_Planner__r.Owner_Role__c )</formula>
    <label>Owner_Role</label>
    <type>Text</type>
</CustomField>