Production/force-app/main/default/objects/Sales_Planner__c/fields/Pricing_Discount_Programs__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Discount_Programs__c</fullName>
    <description>2019 Pricing Discount Programs</description>
    <inlineHelpText>Based on Signed Contract</inlineHelpText>
    <label>Pricing Discount Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3FOR30NORETURNS</fullName>
            </value>
            <value>
                <fullName>GOLD19NORETURNS</fullName>
            </value>
            <value>
                <fullName>GOLD+19NORETURNS</fullName>
            </value>
            <value>
                <fullName>PURPLE19NORETURNS</fullName>
            </value>
            <value>
                <fullName>PURPLE+19NORETURNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>