Production/force-app/main/default/objects/Sales_Planner__c/fields/Primary_GPO__c.field-meta.xml
<CustomField>
    <fullName>Primary_GPO__c</fullName>
    <description>IHN_Requirement</description>
    <inlineHelpText>Please pick the choice that is the primary GPO for the account.</inlineHelpText>
    <label>Primary GPO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MMCAP</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Vizient</fullName>
            </value>
            <value>
                <fullName>Intalere</fullName>
            </value>
            <value>
                <fullName>HealthTrust (HPG)</fullName>
            </value>
            <value>
                <fullName>The Resource Group(TRG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>