Production/force-app/main/default/objects/Sales_Planner__c/fields/PY_YTD_Vaxchora_doses__c.field-meta.xml
<CustomField>
    <fullName>PY_YTD_Vaxchora_doses__c</fullName>
    <formula>Account_Sales_Planner__r.PY_YTD_Vaxchora_doses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2018 year-to-date Vaxchora doses</inlineHelpText>
    <label>PY_YTD_ Vaxchora doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>