Production/force-app/main/default/objects/Sales_Planner__c/fields/PY_YTD_Vivotif_doses__c.field-meta.xml
<CustomField>
    <fullName>PY_YTD_Vivotif_doses__c</fullName>
    <formula>(Account_Sales_Planner__r.PY_YTD_Vivotif_doses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2018 year-to-date Vivotif doses</inlineHelpText>
    <label>PY_YTD_Vivotif doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>