Production/force-app/main/default/objects/Sales_Planner__c/fields/Realistic_Probability_1H_RAM_Proj_Doses__c.field-meta.xml
<CustomField>
    <fullName>Realistic_Probability_1H_RAM_Proj_Doses__c</fullName>
    <inlineHelpText>Please select a probability % of how likely you will be able to achieve the projected doses.</inlineHelpText>
    <label>Realistic Probability_1H RAM Proj. Doses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>