Production/force-app/main/default/objects/Sales_Planner__c/fields/State_Province2__c.field-meta.xml
<CustomField>
    <fullName>State_Province2__c</fullName>
    <formula>Account_Sales_Planner__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>