Production/force-app/main/default/objects/Sales_Planner__c/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <formula>Account_Sales_Planner__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>