Production/force-app/main/default/objects/Sales_Planner__c/fields/Untouched_Days__c.field-meta.xml
<CustomField>
    <fullName>Untouched_Days__c</fullName>
    <formula>Today()-DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Untouched Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>