Production/force-app/main/default/objects/Sales_Planner__c/fields/Vaxchora_Growth_YOY_YTD__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Growth_YOY_YTD__c</fullName>
    <formula>(((Account_Sales_Planner__r.X2019_Vaxchora_doses_YTD__c -   Account_Sales_Planner__r.PY_YTD_Vaxchora_doses__c )/ Account_Sales_Planner__r.PY_YTD_Vaxchora_doses__c ))</formula>
    <label>YTD YOY Vaxchora Growth(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>