Production/force-app/main/default/objects/Sales_Planner__c/fields/Vivotif_Committed_Doses__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Committed_Doses__c</fullName>
    <description>2019 Vivotif Contract program</description>
    <label>Vivotif Committed Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>