Production/force-app/main/default/objects/Sales_Planner__c/fields/Vivotif_Growth_YOY_YTD__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Growth_YOY_YTD__c</fullName>
    <formula>(((Account_Sales_Planner__r.X2019_Vivotif_doses_YTD__c -  Account_Sales_Planner__r.PY_YTD_Vivotif_doses__c )/ Account_Sales_Planner__r.PY_YTD_Vivotif_doses__c ))</formula>
    <label>YTD YOY Vivotif Growth(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>