Production/force-app/main/default/objects/Sales_Planner__c/fields/X1H_Actual_Vivotif_Doses__c.field-meta.xml
<CustomField>
    <fullName>X1H_Actual_Vivotif_Doses__c</fullName>
    <formula>Account_Sales_Planner__r.X1H_Actual_Vivotif_Doses__c</formula>
    <label>1H- Actual Vivotif Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>