Production/force-app/main/default/objects/Sales_Planner__c/fields/X2017_Typhoid_doses__c.field-meta.xml
<CustomField>
    <fullName>X2017_Typhoid_doses__c</fullName>
    <formula>TEXT( Account_Sales_Planner__r.X2017_YTD_Typhoid_doses__c)</formula>
    <label>Typhoid doses</label>
    <type>Text</type>
</CustomField>