Production/force-app/main/default/objects/Sales_Planner__c/fields/X2017_Vaxchora_doses__c.field-meta.xml
<CustomField>
    <fullName>X2017_Vaxchora_doses__c</fullName>
    <formula>Account_Sales_Planner__r.X2017_YTD_Vaxchora_doses__c</formula>
    <label>Vaxchora doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>