Production/force-app/main/default/objects/Sales_Planner__c/fields/X2018_Typhoid_doses__c.field-meta.xml
<CustomField>
    <fullName>X2018_Typhoid_doses__c</fullName>
    <formula>TEXT(Account_Sales_Planner__r.X2018_YTD_Typhoid_Doses__c)</formula>
    <inlineHelpText>2018 typhoid doses</inlineHelpText>
    <label>Previous Year Typhoid doses</label>
    <type>Text</type>
</CustomField>