Production/force-app/main/default/objects/Sales_Planner__c/fields/X2018_Vivotif_doses__c.field-meta.xml
<CustomField>
    <fullName>X2018_Vivotif_doses__c</fullName>
    <formula>Account_Sales_Planner__r.X2018_YTD_Vivotif_doses__c</formula>
    <inlineHelpText>2018 Vivotif doses</inlineHelpText>
    <label>Previous Year Vivotif doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>