Production/force-app/main/default/objects/Sales_Planner__c/fields/X2019_Vaxchora_doses_YTD__c.field-meta.xml
<CustomField>
    <fullName>X2019_Vaxchora_doses_YTD__c</fullName>
    <formula>Account_Sales_Planner__r.X2019_Vaxchora_doses_YTD__c</formula>
    <label>YTD Vaxchora Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>