Production/force-app/main/default/objects/Sales_Planner__c/fields/X2H_Actual_Vaxchora_Doses__c.field-meta.xml
<CustomField>
    <fullName>X2H_Actual_Vaxchora_Doses__c</fullName>
    <formula>Account_Sales_Planner__r.X2H_Actual_Vaxchora_Doses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2H- Actual Vaxchora Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>