Production/force-app/main/default/objects/Sales_Planner__c/fields/X2H_Vivotif_Gap__c.field-meta.xml
<CustomField>
    <fullName>X2H_Vivotif_Gap__c</fullName>
    <formula>X2H_Actual_Vivotif_Doses__c -(1.05* Account_Sales_Planner__r.X2H_PY_Vivotif_Doses__c)</formula>
    <label>2H Vivotif Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>