Production/force-app/main/default/objects/Sales_Planner__c/fields/Yellow_Fever_Vaccination_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Fever_Vaccination_Clinic__c</fullName>
    <formula>Account_Sales_Planner__r.Yellow_fever_vaccination_clinics__c</formula>
    <label>Yellow Fever Vaccination Clinic</label>
    <type>Checkbox</type>
</CustomField>