Production/force-app/main/default/objects/Sales_Planner__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Account_Sales_Planner__r.Zip__c</formula>
    <label>IMS Zip</label>
    <type>Text</type>
</CustomField>