Production/force-app/main/default/objects/Sales_Planner__c/listViews/All_SalesPlanner_Accounts.listView-meta.xml
<ListView>
    <fullName>All_SalesPlanner_Accounts</fullName>
    <columns>DDD_Outlet_ID__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Account_Sales_Planner__c</columns>
    <columns>Region__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>ST__c</columns>
    <columns>Zip__c</columns>
    <columns>Paxvax_Classification__c</columns>
    <columns>X2019_Typhoid_doses_YTD__c</columns>
    <columns>X2019_Vivotif_doses_YTD__c</columns>
    <columns>X2019_Vaxchora_doses_YTD__c</columns>
    <columns>X2018_Typhoid_doses__c</columns>
    <columns>X2018_Vivotif_doses__c</columns>
    <columns>X2018_Vaxchora_doses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DDD_Outlet_ID__c</field>
        <operation>greaterThan</operation>
        <value>00000000</value>
    </filters>
    <label>All SalesPlanner Accounts</label>
    <sharedTo>
        <role>SFDC_Admin</role>
    </sharedTo>
</ListView>