Production/force-app/main/default/objects/Sales_Planner__c/listViews/My_SalesPlanner.listView-meta.xml
<ListView>
    <fullName>My_SalesPlanner</fullName>
    <columns>DDD_Outlet_ID__c</columns>
    <columns>NAME</columns>
    <columns>Account_Sales_Planner__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>ST__c</columns>
    <columns>Zip__c</columns>
    <columns>Street2__c</columns>
    <columns>City2__c</columns>
    <columns>State_Province2__c</columns>
    <columns>Zip_Postal_Code2__c</columns>
    <columns>X1H_Actual_Vaxchora_Doses__c</columns>
    <columns>X1H_Actual_Vivotif_Doses__c</columns>
    <filterScope>Mine</filterScope>
    <label>My SalesPlanner</label>
    <sharedTo>
        <role>Inside_Sales_Rep</role>
        <role>Regional_Account_Manager</role>
    </sharedTo>
</ListView>