Production/force-app/main/default/objects/Sales_Planner__c/listViews/MySalesPlanner_blankFields.listView-meta.xml
<ListView>
    <fullName>MySalesPlanner_blankFields</fullName>
    <columns>DDD_Outlet_ID__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Street2__c</columns>
    <columns>City2__c</columns>
    <columns>State_Province2__c</columns>
    <columns>Parent_Account__c</columns>
    <columns>X2018_Typhoid_doses__c</columns>
    <columns>H_RAM_Projected_Vaxchora_1__c</columns>
    <columns>Realistic_Probability_1H_RAM_Proj_Doses__c</columns>
    <columns>X2019_Vaxchora_doses_YTD__c</columns>
    <columns>Issues_Objections_Limitations__c</columns>
    <columns>Action_Plan__c</columns>
    <columns>Last_Person_Visit__c</columns>
    <columns>Total_F2F_Meetings__c</columns>
    <filterScope>Mine</filterScope>
    <label>MySalesPlanner_blankFields</label>
    <sharedTo>
        <role>SFDC_Admin</role>
    </sharedTo>
</ListView>